--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -274,6 +274,7 @@
         MonthlySell();
         
         await proveedorServices.CrearSuplidor();
+        await categoriaServices.CrearCategoria();
     }
 
 }
